Use monocle globally except 4th desktop
Desktop 4 is chats desktop, tiling works well for them

--- a/chunkwm/.chunkwmrc
+++ b/chunkwm/.chunkwmrc
@@ -33,9 +33,8 @@ chunkc core::hotload 0
 # NOTE: the following are config variables for the chunkwm-tiling plugin.
 #
 
-chunkc set global_desktop_mode           bsp
-chunkc set 2_desktop_mode                monocle
-chunkc set 5_desktop_mode                float
+chunkc set global_desktop_mode           monocle
+chunkc set 4_desktop_mode                bsp
 
 chunkc set global_desktop_offset_top     5
 chunkc set global_desktop_offset_bottom  5
