--- a/chunkwm/.chunkwmrc
+++ b/chunkwm/.chunkwmrc
@@ -105,3 +105,4 @@ chunkc core::load ffm.so
 chunkc tiling::rule --owner Finder --name Copy --state float
 chunkc tiling::rule --owner \"App Store\" --state float
 chunkc tiling::rule --owner iTerm --name "JingYen" --state float
+chunkc tiling::rule --owner "Emacs.*" --state tile
