--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,12 @@ set -g base-index 1
 # Sane mouse scrolling
 set -g mouse on
 
+# Use the xterm-256color terminal
+set -g default-terminal "xterm-256color"
+
+# Apply Tc
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
