--- a/ncmpcpp/.ncmpcpp/config
+++ b/ncmpcpp/.ncmpcpp/config
@@ -417,11 +417,11 @@ fetch_lyrics_for_current_song_in_background = yes
 #
 #ask_before_clearing_playlists = yes
 #
-#clock_display_seconds = no
+#clock_display_seconds = yes
 #
 #display_volume_level = yes
 #
-#display_bitrate = no
+display_bitrate = yes
 #
 #display_remaining_time = no
 #
