Fix tmux ESC delay

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,9 @@ set -g default-terminal "xterm-256color"
 # Apply Tc
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# Lower timout value for ESC (Cooperate with nvim)
+set -sg escape-time 10
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
