--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -1,3 +1,10 @@
 inoremap fd <Esc>
 set number
 set relativenumber
+
+set ignorecase
+set smartcase
+
+set surround
+set multiple-cursors
+set commentary
